    - file:
      - [API break] Not a public API anymore.
    - system/state:
      - New method 'getArchitecture'.
    - download/manager:
      - Removed 'alive pings'.
      - Notify the download progress of download sizes earlier. This improves
        the total percent accuracy where a grand total size is not known
        beforehand (for example, metadata updates).
    - download/method{,factory}:
      - [API break]: don't require shared_ptr< Config > anymore.
    - download/progress:
      - Added support for the dynamic changes of expected download sizes.
      - [API break]' 'DownloadRecord': the field 'beingPostprocessed' is
        replaced with a new field 'phase'.
      - [API break] 'setTotalEstimatedSize': removed as superseded by early
        notificiations by download manager.
      - New methods 'markAsOptional' and 'isOptional'.
    - hashsums:
      - Fixed non-thread-safe initialization of libgcrypt.
  * downloadmethods:
    - debdelta:
      - Pass delta size (when/if known) to download progress.
        (Closes: #690914)
  * doc:
    - tutorial:
      - In the man page version, all command examples are now marked bold.
    - man/cupt.1:
      - Fixed the typo: suffix -> prefix in the 'pkgnames' command.
        (Closes: #689518)
  * debian:
    - control:
      - Bumped the library API version.
  * build system:
    - Specify OUTPUT_NAME property for targets. As a side effect this
      obsoletes the custom cupt.bin install statement which prevented 'make
      install' from working for out-of-tree builds. (Closes: #683872)
    - doc:
      - Fixed 'make install' for out-of-tree builds.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 08 Apr 2012 10:59:48 +0300

cupt (2.5.9) unstable; urgency=low

  * lib:
    - download/uri:
      - Constructor: accept single- or triple-slashes after the ':' character,
        which is the usual situation for 'file' or 'copy' schemes.
        Thanks to Alexey Ivanov for the report. (Closes: #683873)